implemented responsive design

--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -3,22 +3,28 @@
     flex-direction: column;
     background-color: #150b3e;
     color: white;
+    width: 100%;
     
 }
 
 .home-div-dark {
     display: flex;
     flex-direction: row;
+
 }
 
 .home-div-2-dark {
     display: flex;
     flex-direction: column;
+    transition: margin-left 0.3s ease;
+    padding-top: 150px;
 }
 
 .home-div-2-light {
     display: flex;
     flex-direction: column;
+    transition: margin-left 0.3s ease;
+    padding-top: 100px;
 }
 
 .home-bg-container-light {
@@ -26,9 +32,37 @@
     flex-direction: column;
     background-color: rgb(236, 244, 248);
     color: rgb(46, 16, 137);
+    width: 100%;
 }
 
 .home-div-light {
     display: flex;
     flex-direction: row;
+}
+
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+
+    .home-div-2-dark,
+    .home-div-2-light {
+        margin-left: 0px;
+    }
+
+    .home-div-2-dark.sidebar-visible,
+    .home-div-2-light.sidebar-visible {
+        margin-left: 370px; 
+    }
+    
+}
+
+@media (min-width: 769px) {
+    .sidebar-dark, .sidebar-light {
+        position: relative;
+        transform: translateX(0);
+    }
+
+    .home-div-2-dark,
+    .home-div-2-light {
+        margin-left: 370px; /* Adjust this based on the sidebar width */
+    }
 }
