--- a/src/components/Content/index.css
+++ b/src/components/Content/index.css
@@ -1,10 +1,132 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
-  margin: 0;
-  padding: 0;
-}
+.content-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
   
+
+
+}
+.topy-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  
+
+}
+.top-content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #263268;
+  height: 100px;
+  padding: 10px 30px;
+  border-radius: 20px;
+  margin: 15px;
+ 
+  
+}
+
+.top-content-light {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #fff;
+  height: 100px;
+  padding: 10px 30px;
+  border-radius: 20px;
+  margin: 15px;
+ 
+  
+}
+@media screen and (min-width: 768px) and (max-width: 900px ){
+  .content-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 10px;
+   
+  
+  }
+
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px ){
+  .content-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 10px;
+   
+  
+  }
+
+}
+
+@media screen and (min-width: 768px) and (max-width: 900px) {
+  .top-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #263268;
+    height: 100px;
+    padding: 10px 30px;
+    border-radius: 20px;
+    margin: 15px;
+    
+    
+  }
+  
+  .top-content-light {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    height: 100px;
+    padding: 10px 30px;
+    border-radius: 20px;
+    margin: 15px;
+      
+  }
+  
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  .top-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #263268;
+    height: 100px;
+    padding: 10px 30px;
+    border-radius: 20px;
+    margin: 15px;
+    
+    
+  }
+  
+  .top-content-light {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    height: 100px;
+    padding: 10px 30px;
+    border-radius: 20px;
+    margin: 15px;  
+    
+  }
+  
+}
+ 
 
 .dashboard-container-dark {
   padding: 20px;
@@ -14,6 +136,8 @@ body {
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
+  
+  
 
 }
 
@@ -25,16 +149,39 @@ body {
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
+  
+
 
 }
 
-.content-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin: 0px;
-
+@media screen and (min-width: 320px) and (max-width: 1000px)  {
+  .dashboard-container-dark {
+    padding: 20px;
+    color: white;
+    width: 100%;
+    background-color: #150b3e;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    
+    
+  
+  }
+  
+  .dashboard-container-light { 
+    padding: 20px;
+    width: 100%;
+    color: rgb(46, 16, 137);
+    background-color: rgb(236, 244, 248);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    
+  
+  
+  }
 }
 
 
@@ -42,28 +189,9 @@ h1 {
   text-align: center;
   
 }
-  
-.top-content {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  background-color: #263268;
-  height: 100px;
-  padding: 10px 30px;
-  border-radius: 20px;
-  margin-left: 30px;
-}
 
-.top-content-light {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  background-color: #fff;
-  height: 100px;
-  padding: 10px 30px;
-  border-radius: 20px;
-  margin-left: 30px;
-}
+
+
 
 .content-icons {
   font-size: 30px;
