--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     color: rgb(46, 16, 137);
     background-color: rgb(236, 244, 248);
+    
 }
 
 .header-container-dark {
@@ -10,6 +11,7 @@
     flex-direction: column;
     color: white;
     background-color: #150b3e;
+    
    
 }
 
@@ -20,6 +22,12 @@
     justify-content: space-between;
     align-items: center;
     background-color: #150b3e;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1001;
+    
 }
 
 .header-1-light {
@@ -28,6 +36,13 @@
     justify-content: space-between;
     align-items: center;
     background-color: rgb(236, 244, 248);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1001;
+    
+    
 }
 
 .headings-container-dark {
@@ -74,6 +89,7 @@
 }
 
 
+
 .para-dark {
     font-size: 15px;
     margin-bottom: 0px;
@@ -88,6 +104,16 @@
     margin-top: 5px;
     padding-top: 0px;
     
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px){
+    .heading {
+        font-size: 25px;
+        margin-top: 5px;
+        padding-top: 0px;
+        margin-left: 0px;
+        
+    }
 }
 
 .div-1-dark {
@@ -151,4 +177,45 @@ button {
     height: 30px;
     border-radius: 15px;
     margin-left: 10px;
+}
+
+.button-icon {
+    /* display: flex;
+    background-color: pink;
+    width: 150px;
+    height: 60px;
+    margin: 30px;
+} */
+ display: none;
+}
+.menu-icon {
+    display: none;
+} 
+
+
+
+.menu-icon-light {
+    display: none;
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+    .button-icon {
+        display: block;
+        height: 50px;
+        width: 150px;
+        margin: 10px;
+    }
+    .menu-icon {
+        display: block;
+        font-size: 27px;
+        color: #fff;
+    }
+
+    .menu-icon-light {
+        display: block;
+        font-size: 25px;
+        color: rgb(46, 16, 137);
+    }
+    
+
 }
